# aws-cdk-app-python-example

./: .copier-answers.aws-cdk.yml  .copier-answers.common.yml  .gitignore  .release-please-manifest.json  CHANGELOG.md  MANIFEST.in  README.md  app.py  cdk.json  pyproject.toml  release-please-config.json  setup.py
.github/actions/set-build-variables/: action.yml  set_build_variables.py
.github/workflows/: continuous-integration.yaml  pull-request-verifier.yaml
.scripts/: upgrade-dependencies.sh
aws_cdk_app_python_example/: app.py
aws_cdk_app_python_example/stacks/: log_group_stack.py
cdk_app/: cdk_app_stack.py
tests/unit/: test_cdk_app_stack.py
tests/unit/stacks/: test_cdk_app_stack.py
