[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-farkas.aws-cdk-app-python-example"
description = "An example AWS CDK application built with Python"
version = "0.1.0"
authors = [
    { name = "Mihaly Farkas" }
]
requires-python = ">=3.8"
dependencies = [
    "aws-cdk-lib>=2.176.0",
    "constructs>=10.0.0,<11.0.0"
]

[project.optional-dependencies]
build = [
    "build>=1.2.2",
    "toml>=0.10.2",
]
test = [
    "pytest>=8.3.4",
]
